# diskanalysis

./: AGENTS.md  README.md  pyproject.toml  setup.py
csrc/: ac_matcher.c  matcher.c  prefix_trie.c  walker.c
diskanalysis/cli/: app.py
diskanalysis/config/: defaults.py  loader.py  schema.py
diskanalysis/models/: enums.py  insight.py  scan.py
diskanalysis/services/: formatting.py  insights.py  patterns.py  scanner.py  summary.py
diskanalysis/ui/: app.py  app.tcss
dux/: _ac_matcher.pyi  _prefix_trie.pyi  _walker.c
dux/cli/: app.py
dux/config/: defaults.py  loader.py  schema.py
dux/models/: enums.py  insight.py  scan.py
dux/scan/: __init__.py  _base.py  bulk_scanner.py  native_scanner.py  python_scanner.py
dux/services/: formatting.py  fs.py  insights.py  patterns.py  scanner.py  summary.py  tree.py
dux/ui/: app.py  views.py
tests/: factories.py  fs_mock.py
tests/cli/: test_app.py
tests/config/: test_loader.py  test_loader_ext.py  test_schema.py
tests/scan/: test_base_ext.py  test_init.py  test_posix_scanner.py
tests/scenarios/: test_end_to_end.py
tests/services/: test_ac_matcher.py  test_formatting.py  test_insights.py  test_insights_ext.py  test_matcher.py  test_native_scanner.py  test_patterns.py  test_patterns_ext.py  test_prefix_trie.py  test_scanner.py  test_summary.py  test_tree.py
tests/ui/: test_app_logic.py  test_app_tui.py
