[project]
name = "dux"
version = "0.1.0"
description = "Fast, interactive terminal disk usage analyzer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.9.0",
  "textual>=0.89.0",
  "result>=0.17.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "basedpyright>=1.37.1",
]

[project.scripts]
dux = "dux.cli.app:cli"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dux*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportImplicitOverride = true
reportIncompatibleMethodOverride = true
reportImplicitStringConcatenation = true
reportCallInDefaultInitializer = "warning"
reportMissingParameterType = "warning"
reportUnnecessaryCast = true
reportAny = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportMissingTypeStubs = "warning"
reportPrivateUsage = "error"
reportUnnecessaryIsInstance = false

[[tool.basedpyright.executionEnvironments]]
root = "tests"
extraPaths = ["."]
reportPrivateUsage = false
reportUnknownMemberType = false
reportAttributeAccessIssue = false
reportArgumentType = false
reportAny = false
reportCallInDefaultInitializer = "none"
reportMissingParameterType = "none"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "pytest>=8.3.0",
    "ruff>=0.15.1",
]
